[gd_scene load_steps=9 format=3 uid="uid://dojo7g52cg6wt"]

[ext_resource type="Script" path="res://player/grapple_rope.gd" id="1_sf8rp"]
[ext_resource type="PackedScene" uid="uid://bylx2vo4mxyvb" path="res://rope_chunk.tscn" id="2_oux8d"]
[ext_resource type="Texture2D" uid="uid://2aagxf8ip3r2" path="res://player/grapple_end.png" id="3_163k5"]
[ext_resource type="Script" path="res://player/grapple_audio.gd" id="4_547b8"]
[ext_resource type="AudioStream" uid="uid://ce2fqbjo22hui" path="res://player/grapple_throw_a.ogg" id="5_7w48c"]
[ext_resource type="AudioStream" uid="uid://cycn7m4uq8wd4" path="res://player/grapple_lock_a.ogg" id="6_y75p8"]
[ext_resource type="AudioStream" uid="uid://d12t4kjh7j1if" path="res://player/chain_click.ogg" id="7_dgpcs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pybon"]
size = Vector2(5, 8)

[node name="GrappleRope" type="RigidBody2D"]
collision_layer = 0
mass = 10.0
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_sf8rp")
shoot_impulse = 6000.0
pull_strength = 100000.0
link_scene = ExtResource("2_oux8d")
stick_force = 5000.0

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pybon")

[node name="EndSprite2" type="Sprite2D" parent="."]
position = Vector2(-1.5, 0)
texture = ExtResource("3_163k5")

[node name="Audio" type="Node2D" parent="." node_paths=PackedStringArray("shoot_sound", "lock_sound", "chain_eat_sound")]
script = ExtResource("4_547b8")
shoot_sound = NodePath("Shoot")
lock_sound = NodePath("Lock")
chain_eat_sound = NodePath("Eat")

[node name="Shoot" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("5_7w48c")

[node name="Lock" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("6_y75p8")

[node name="Eat" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_dgpcs")
max_polyphony = 3

[connection signal="link_removed" from="." to="Audio" method="_on_grapple_rope_link_removed"]
[connection signal="locked_grapple" from="." to="Audio" method="_on_grapple_rope_locked_grapple"]
[connection signal="shot_grapple" from="." to="Audio" method="_on_grapple_rope_shot_grapple"]
